src/CBindings/libfdtLite.rs

unsafe extern "C" {
    #[doc = " fdt_node_offset_by_prop_value - find nodes with a given property value\n @fdt: pointer to the device tree blob\n @startoffset: only find nodes after this offset\n @propname: property name to check\n @propval: property value to search for\n @proplen: length of the value in propval\n\n fdt_node_offset_by_prop_value() returns the offset of the first\n node after startoffset, which has a property named propname whose\n value is of length proplen and has value equal to propval; or if\n startoffset is -1, the very first such node in the tree.\n\n To iterate through all nodes matching the criterion, the following\n idiom can be used:\n\toffset = fdt_node_offset_by_prop_value(fdt, -1, propname,\n\t\t\t\t\t       propval, proplen);\n\twhile (offset != -FDT_ERR_NOTFOUND) {\n\t\t// other code here\n\t\toffset = fdt_node_offset_by_prop_value(fdt, offset, propname,\n\t\t\t\t\t\t       propval, proplen);\n\t}\n\n Note the -1 in the first call to the function, if 0 is used here\n instead, the function will never locate the root node, even if it\n matches the criterion.\n\n returns:\n\tstructure block offset of the located node (>= 0, >startoffset),\n\t\t on success\n\t-FDT_ERR_NOTFOUND, no node matching the criterion exists in the\n\t\ttree after startoffset\n\t-FDT_ERR_BADOFFSET, nodeoffset does not refer to a BEGIN_NODE tag\n\t-FDT_ERR_BADMAGIC,\n\t-FDT_ERR_BADVERSION,\n\t-FDT_ERR_BADSTATE,\n\t-FDT_ERR_BADSTRUCTURE, standard meanings"]
    pub fn fdt_node_offset_by_prop_value(
        fdt: *const core::ffi::c_void,
        startoffset: core::ffi::c_int,
        propname: *const core::ffi::c_char,
        propval: *const core::ffi::c_void,
        proplen: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " fdt_node_offset_by_phandle - find the node with a given phandle\n @fdt: pointer to the device tree blob\n @phandle: phandle value\n\n fdt_node_offset_by_phandle() returns the offset of the node\n which has the given phandle value.  If there is more than one node\n in the tree with the given phandle (an invalid tree), results are\n undefined.\n\n returns:\n\tstructure block offset of the located node (>= 0), on success\n\t-FDT_ERR_NOTFOUND, no node with that phandle exists\n\t-FDT_ERR_BADPHANDLE, given phandle value was invalid (0 or -1)\n\t-FDT_ERR_BADMAGIC,\n\t-FDT_ERR_BADVERSION,\n\t-FDT_ERR_BADSTATE,\n\t-FDT_ERR_BADSTRUCTURE, standard meanings"]
    pub fn fdt_node_offset_by_phandle(
        fdt: *const core::ffi::c_void,
        phandle: u32_,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " fdt_node_check_compatible - check a node's compatible property\n @fdt: pointer to the device tree blob\n @nodeoffset: offset of a tree node\n @compatible: string to match against\n\n fdt_node_check_compatible() returns 0 if the given node contains a\n @compatible property with the given string as one of its elements,\n it returns non-zero otherwise, or on error.\n\n returns:\n\t0, if the node has a 'compatible' property listing the given string\n\t1, if the node has a 'compatible' property, but it does not list\n\t\tthe given string\n\t-FDT_ERR_NOTFOUND, if the given node has no 'compatible' property\n\t-FDT_ERR_BADOFFSET, if nodeoffset does not refer to a BEGIN_NODE tag\n\t-FDT_ERR_BADMAGIC,\n\t-FDT_ERR_BADVERSION,\n\t-FDT_ERR_BADSTATE,\n\t-FDT_ERR_BADSTRUCTURE, standard meanings"]
    pub fn fdt_node_check_compatible(
        fdt: *const core::ffi::c_void,
        nodeoffset: core::ffi::c_int,
        compatible: *const core::ffi::c_char,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " fdt_node_offset_by_compatible - find nodes with a given 'compatible' value\n @fdt: pointer to the device tree blob\n @startoffset: only find nodes after this offset\n @compatible: 'compatible' string to match against\n\n fdt_node_offset_by_compatible() returns the offset of the first\n node after startoffset, which has a 'compatible' property which\n lists the given compatible string; or if startoffset is -1, the\n very first such node in the tree.\n\n To iterate through all nodes matching the criterion, the following\n idiom can be used:\n\toffset = fdt_node_offset_by_compatible(fdt, -1, compatible);\n\twhile (offset != -FDT_ERR_NOTFOUND) {\n\t\t// other code here\n\t\toffset = fdt_node_offset_by_compatible(fdt, offset, compatible);\n\t}\n\n Note the -1 in the first call to the function, if 0 is used here\n instead, the function will never locate the root node, even if it\n matches the criterion.\n\n returns:\n\tstructure block offset of the located node (>= 0, >startoffset),\n\t\t on success\n\t-FDT_ERR_NOTFOUND, no node matching the criterion exists in the\n\t\ttree after startoffset\n\t-FDT_ERR_BADOFFSET, nodeoffset does not refer to a BEGIN_NODE tag\n\t-FDT_ERR_BADMAGIC,\n\t-FDT_ERR_BADVERSION,\n\t-FDT_ERR_BADSTATE,\n\t-FDT_ERR_BADSTRUCTURE, standard meanings"]
    pub fn fdt_node_offset_by_compatible(
        fdt: *const core::ffi::c_void,
        startoffset: core::ffi::c_int,
        compatible: *const core::ffi::c_char,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " fdt_stringlist_contains - check a string list property for a string\n @strlist: Property containing a list of strings to check\n @listlen: Length of property\n @str: String to search for\n\n This is a utility function provided for convenience. The list contains\n one or more strings, each terminated by \\0, as is found in a device tree\n \"compatible\" property.\n\n Return: 1 if the string is found in the list, 0 not found, or invalid list"]
    pub fn fdt_stringlist_contains(
        strlist: *const core::ffi::c_char,
        listlen: core::ffi::c_int,
        str_: *const core::ffi::c_char,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " fdt_stringlist_count - count the number of strings in a string list\n @fdt: pointer to the device tree blob\n @nodeoffset: offset of a tree node\n @property: name of the property containing the string list\n\n Return:\n   the number of strings in the given property\n   -FDT_ERR_BADVALUE if the property value is not NUL-terminated\n   -FDT_ERR_NOTFOUND if the property does not exist"]
    pub fn fdt_stringlist_count(
        fdt: *const core::ffi::c_void,
        nodeoffset: core::ffi::c_int,
        property: *const core::ffi::c_char,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " fdt_stringlist_search - find a string in a string list and return its index\n @fdt: pointer to the device tree blob\n @nodeoffset: offset of a tree node\n @property: name of the property containing the string list\n @string: string to look up in the string list\n\n Note that it is possible for this function to succeed on property values\n that are not NUL-terminated. That's because the function will stop after\n finding the first occurrence of @string. This can for example happen with\n small-valued cell properties, such as #address-cells, when searching for\n the empty string.\n\n return:\n   the index of the string in the list of strings\n   -FDT_ERR_BADVALUE if the property value is not NUL-terminated\n   -FDT_ERR_NOTFOUND if the property does not exist or does not contain\n                     the given string"]
    pub fn fdt_stringlist_search(
        fdt: *const core::ffi::c_void,
        nodeoffset: core::ffi::c_int,
        property: *const core::ffi::c_char,
        string: *const core::ffi::c_char,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " fdt_stringlist_get() - obtain the string at a given index in a string list\n @fdt: pointer to the device tree blob\n @nodeoffset: offset of a tree node\n @property: name of the property containing the string list\n @index: index of the string to return\n @lenp: return location for the string length or an error code on failure\n\n Note that this will successfully extract strings from properties with\n non-NUL-terminated values. For example on small-valued cell properties\n this function will return the empty string.\n\n If non-NULL, the length of the string (on success) or a negative error-code\n (on failure) will be stored in the integer pointer to by lenp.\n\n Return:\n   A pointer to the string at the given index in the string list or NULL on\n   failure. On success the length of the string will be stored in the memory\n   location pointed to by the lenp parameter, if non-NULL. On failure one of\n   the following negative error codes will be returned in the lenp parameter\n   (if non-NULL):\n     -FDT_ERR_BADVALUE if the property value is not NUL-terminated\n     -FDT_ERR_NOTFOUND if the property does not exist"]
    pub fn fdt_stringlist_get(
        fdt: *const core::ffi::c_void,
        nodeoffset: core::ffi::c_int,
        property: *const core::ffi::c_char,
        index: core::ffi::c_int,
        lenp: *mut core::ffi::c_int,
    ) -> *const core::ffi::c_char;
}
unsafe extern "C" {
    #[doc = " fdt_address_cells - retrieve address size for a bus represented in the tree\n @fdt: pointer to the device tree blob\n @nodeoffset: offset of the node to find the address size for\n\n When the node has a valid #address-cells property, returns its value.\n\n returns:\n\t0 <= n < FDT_MAX_NCELLS, on success\n\t2, if the node has no #address-cells property\n\t-FDT_ERR_BADNCELLS, if the node has a badly formatted or invalid\n\t\t#address-cells property\n\t-FDT_ERR_BADMAGIC,\n\t-FDT_ERR_BADVERSION,\n\t-FDT_ERR_BADSTATE,\n\t-FDT_ERR_BADSTRUCTURE,\n\t-FDT_ERR_TRUNCATED, standard meanings"]
    pub fn fdt_address_cells(
        fdt: *const core::ffi::c_void,
        nodeoffset: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " fdt_size_cells - retrieve address range size for a bus represented in the\n                  tree\n @fdt: pointer to the device tree blob\n @nodeoffset: offset of the node to find the address range size for\n\n When the node has a valid #size-cells property, returns its value.\n\n returns:\n\t0 <= n < FDT_MAX_NCELLS, on success\n\t1, if the node has no #size-cells property\n\t-FDT_ERR_BADNCELLS, if the node has a badly formatted or invalid\n\t\t#size-cells property\n\t-FDT_ERR_BADMAGIC,\n\t-FDT_ERR_BADVERSION,\n\t-FDT_ERR_BADSTATE,\n\t-FDT_ERR_BADSTRUCTURE,\n\t-FDT_ERR_TRUNCATED, standard meanings"]
    pub fn fdt_size_cells(
        fdt: *const core::ffi::c_void,
        nodeoffset: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn fdt_setprop_inplace_namelen_partial(
        fdt: *mut core::ffi::c_void,
        nodeoffset: core::ffi::c_int,
        name: *const core::ffi::c_char,
        namelen: core::ffi::c_int,
        idx: u32_,
        val: *const core::ffi::c_void,
        len: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn fdt_setprop_inplace(
        fdt: *mut core::ffi::c_void,
        nodeoffset: core::ffi::c_int,
        name: *const core::ffi::c_char,
        val: *const core::ffi::c_void,
        len: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " fdt_nop_property - replace a property with nop tags\n @fdt: pointer to the device tree blob\n @nodeoffset: offset of the node whose property to nop\n @name: name of the property to nop\n\n fdt_nop_property() will replace a given property's representation\n in the blob with FDT_NOP tags, effectively removing it from the\n tree.\n\n This function will alter only the bytes in the blob which contain\n the property, and will not alter or move any other part of the\n tree.\n\n returns:\n\t0, on success\n\t-FDT_ERR_NOTFOUND, node does not have the named property\n\t-FDT_ERR_BADOFFSET, nodeoffset did not point to FDT_BEGIN_NODE tag\n\t-FDT_ERR_BADMAGIC,\n\t-FDT_ERR_BADVERSION,\n\t-FDT_ERR_BADSTATE,\n\t-FDT_ERR_BADSTRUCTURE,\n\t-FDT_ERR_TRUNCATED, standard meanings"]
    pub fn fdt_nop_property(
        fdt: *mut core::ffi::c_void,
        nodeoffset: core::ffi::c_int,
        name: *const core::ffi::c_char,
    ) -> core::ffi::c_int;
}
